message RegistData {
	optional string loginChannel = 1;
	optional string logoutChannel = 2;
}
